--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-runtime": "^6.26.0",
     "bootstrap": "^4.6.2",
     "fireworks-js": "^2.10.2",
     "react": "^18.2.0",
@@ -21,6 +22,9 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
+    "react-type-animation": "^3.0.1",
+    "react-typewriter": "^0.4.1",
+    "react-typing-animation": "^1.6.2",
     "three": "^0.151.3",
     "web-vitals": "^2.1.4",
     "webpack": "^5.78.0"
