--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.6.2",
+    "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
     "fireworks-js": "^2.10.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
     "react-fireworks": "^1.0.4",
