--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
+    "express": "^4.18.2",
     "fireworks-js": "^2.10.2",
+    "mongoose": "^7.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -32,9 +35,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-server": "nodemon --watch server server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run start\" \"npm run start-server\""
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +60,11 @@
     ]
   },
   "devDependencies": {
-    "file-loader": "^6.2.0"
-  }
+    "concurrently": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "nodemon": "^2.0.22"
+  },
+  "description": "Welcome to my personal portfolio website, showcasing my software development projects and skills, and more! The website is currently under development and deployed on Netlify with continuous deployment. You can visit the site at [https://chucksong.com](https://chucksong.com).",
+  "main": "webpack.config.js",
+  "keywords": []
 }
