--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-runtime": "^6.26.0",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^4.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "fireworks-js": "^2.10.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
