--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "fireworks-js": "^2.10.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
