--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run start\" \"npm run start-server\""
+    "dev": "concurrently \"npm run start\" \"npm run start-server\"",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": [
