--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-fireworks": "^1.0.4",
     "react-github-graph": "^1.7.0",
     "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
